--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-waypoint": "^10.3.0",
     "styled-components": "^5.3.8",
