--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rbc",
+  "name": "testigosdehielo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,13 +7,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
-    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.12.0",
-    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
-    "react-waypoint": "^10.3.0",
-    "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
