--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-waypoint": "^10.3.0",
+    "sass": "^1.59.3",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
   },
