--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-audio-player": "^0.17.0",
     "react-awesome-slider": "^4.1.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load": "^4.0.1",
+    "react-lazyload": "^3.2.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
